edition = "2023";

package fileservice;

option go_package = "./proto/fileservice";

service FileService {
  rpc ListDirectory(ListDirectoryRequest) returns (ListDirectoryResponse);
}

message ListDirectoryRequest {
  string directory = 1;
}

message DirectoryEntry {
  string name = 1;
  string type = 2;
  string size = 3;
  string link = 4;
}

message ListDirectoryResponse {
  string path = 1;
  repeated DirectoryEntry entries = 2;
  string parent_link = 3;
}
